Update build.gradle (#129)